--- a/package.json
+++ b/package.json
@@ -46,5 +46,10 @@
   "repository": {
     "type": "git",
     "url": ""
+  },
+  "dependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
