--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
 {
-  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "printWidth": 140,
   "singleQuote": true,
-  "tabWidth": 2,
-  "printWidth": 100,
-  "semi": false
+  "trailingComma": "none",
+  "tabWidth": 4,
+  "useTabs": false
 }
