--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --config webpack/webpack.config.js --env env=dev",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.js --env env=prod",
-    "lint": "eslint 'src/**/*.js' || true",
-    "prettify": "prettier --write 'src/**/*.js'"
+    "lint:view": "eslint 'src/**/*.js' || true",
+    "lint:fix": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+    "prettify:format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "keywords": [
     "webpack",
@@ -27,15 +28,19 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
-    "eslint": "^7.28.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-webpack": "^0.13.1",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.2",
     "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.4.1",
+    "prettier": "^2.7.1",
     "sass": "^1.43.5",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
@@ -49,6 +54,7 @@
     "url": ""
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
