--- a/.eslintrc
+++ b/.eslintrc
@@ -56,6 +56,6 @@
           }
       ]
   },
-  "ignorePatterns": ["dist", "node_modules", "webpack.*", "webpack/paths.js"]
+  "ignorePatterns": ["dist", "build", "node_modules", "webpack.*", "webpack/paths.js"]
 }
 
