--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
-**/.DS_Store
+# dependencies
 /node_modules
-/dist
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
 /build
+/dist
+
+# misc
+**/.DS_Store
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+/.idea/
