--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "webpack-boilerplate",
+  "name": "react-redux-material-webpack-boilerplate",
   "version": "",
   "description": "",
   "main": "index.js",
   "author": "",
-  "license": "MIT",
+  "homepage": "",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --config webpack/webpack.config.js --env env=dev",
-    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.js --env env=prod",
+    "build": "cross-env NODE_ENV=production webpack build --config webpack/webpack.config.js --env env=prod",
     "lint:view": "eslint 'src/**/*.js' || true",
     "lint:fix": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "prettify:format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
@@ -18,7 +18,9 @@
     "webpack boilerplate"
   ],
   "devDependencies": {
-    "@babel/core": "^7.15.8",
+    "@babel/core": "^7.18.6",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.15.8",
@@ -28,11 +30,17 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.19.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "7.0.1",
+    "eslint-import-resolver-typescript": "3.2.1",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-import-resolver-webpack": "^0.13.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-markdown": "^2.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -42,7 +50,7 @@
     "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.7.1",
-    "sass": "^1.43.5",
+    "sass": "^1.53.0",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.58.2",
@@ -55,9 +63,30 @@
     "url": ""
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/preset-react": "^7.18.6",
+    "@emotion/cache": "^11.9.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.88",
+    "@mui/material": "^5.8.6",
+    "@mui/styles": "^5.8.6",
+    "@mui/system": "^5.8.6",
+    "@mui/utils": "^5.8.6",
+    "@tabler/icons": "^1.72.0",
+    "apexcharts": "^3.35.3",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.3.16",
+    "material-ui-popup-state": "^4.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-apexcharts": "^1.4.0",
+    "react-device-detect": "^2.2.2",
+    "react-dom": "^18.2.0",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^8.0.2",
+    "react-router": "6.3.0",
+    "react-router-dom": "6.3.0",
+    "redux": "^4.2.0",
+    "yup": "^0.32.11"
   }
 }
