--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@mui/styles": "^5.8.6",
     "@mui/system": "^5.8.6",
     "@mui/utils": "^5.8.6",
+    "@reduxjs/toolkit": "^1.8.6",
     "@tabler/icons": "^1.72.0",
     "apexcharts": "^3.35.3",
     "formik": "^2.2.9",
