--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@reduxjs/toolkit": "^1.8.6",
     "@tabler/icons": "^1.72.0",
     "apexcharts": "^3.35.3",
+    "axios": "^1.1.3",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.16",
     "material-ui-popup-state": "^4.0.1",
